new proj/src/objects/GE_Case_Product__c.object
<CustomObject>
    <description>This is a custom object related to standard &quot;Case&quot; object to implement the Product selection functionality similar to Opportunity Products standard object.</description>
    <fields>
        <fullName>GEPWNUC_J_Code__c</fullName>
        <formula>TEXT(GE_ES_ProdctName__r.GEPWNUC_Offering_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Case__c</fullName>
        <description>This field provides the child relationship to the standard &quot;Case&quot; object.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>Case_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_CustrInpt1__c</fullName>
        <label>Customer Input 1</label>
        <picklist>
            <picklistValues>
                <fullName>Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workmanship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_CustrInpt2__c</fullName>
        <label>Customer Input 2</label>
        <picklist>
            <controllingField>GE_ES_CustrInpt1__c</controllingField>
            <picklistValues>
                <fullName>Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cracked Chipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stripped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deformed Dented Bent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audible Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dielectric Hipot Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fails to Meet Test spec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Toggle/Turn On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visusal Indication Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Trip-No Interrupt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Feature Failing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temperature Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stays On Briefly - Nuisance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Continuity/High Resistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melted/Burned/Blew-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alignment Fit Loose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Wrong/Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knockouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label Marking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_DefectInfo__c</fullName>
        <label>Defect Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Defect_1__c</fullName>
        <label>Defect 1</label>
        <picklist>
            <picklistValues>
                <fullName>Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance or Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlike Evaluated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workmanship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Defect_2__c</fullName>
        <label>Defect 2</label>
        <picklist>
            <controllingField>GE_ES_Defect_1__c</controllingField>
            <picklistValues>
                <fullName>Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corroded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cracked/Chipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crushed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deformed/Dented/Bent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stripped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed Test of Reported Probm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Product Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiring/Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audible Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dielectric/Hipot Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Endurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fails to Meet Test Spec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Metering/Fault Tgt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammed Mechanism/Handle/Butt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melted-Burned-Blew-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Continuity/High Resistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Output Voltage Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resistance/Impedance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stays On Briefly - Nuisance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Lead_Time__c</fullName>
        <label>Lead Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ManufDate__c</fullName>
        <label>Manufacturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Offering__c</fullName>
        <formula>TEXT(GE_ES_ProdctName__r.GE_ES_Offering__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OffrngHid__c</fullName>
        <label>Offering-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OpptyDrvr__c</fullName>
        <formula>TEXT(GE_ES_ProdctName__r.GE_ES_Oppty_Driver__c)</formula>
        <label>Opportunity Driver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OptyDrvHid__c</fullName>
        <label>Oppty Driver-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_P_L_Temp__c</fullName>
        <label>P&amp;L-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_P_L__c</fullName>
        <formula>TEXT(GE_ES_ProdctName__r.GE_ES_P_L__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdCodHid__c</fullName>
        <label>Product Code-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdDesHid__c</fullName>
        <label>Product Description-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdNamHid__c</fullName>
        <label>Product Name-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdSerHid__c</fullName>
        <label>Product Service-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdctCode__c</fullName>
        <formula>GE_ES_ProdctName__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Part Number</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdctDesc__c</fullName>
        <formula>GE_ES_ProdctName__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdctName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>Case_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_ProdctServ__c</fullName>
        <formula>TEXT( GE_ES_ProdctName__r.GE_ES_Product_Service__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Prodct_Line__c</fullName>
        <formula>GE_ES_ProdctName__r.GEEM_ProLn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quantity__c</fullName>
        <label>Defect Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_RPORqShpDt__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_RPO_No__c</fullName>
        <label>Ref Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_RPO_ShipDt__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rec_Action__c</fullName>
        <label>Rec Action</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Serial_Nbr__c</fullName>
        <label>Serial Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_SubPL_Hid__c</fullName>
        <label>Sub P&amp;L-Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sub_P_L__c</fullName>
        <formula>TEXT(GE_ES_ProdctName__r.GE_ES_Sub_P_L__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_TotalPrice__c</fullName>
        <formula>GE_ES_Quantity__c  *  GE_ES_SalesPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PW_Safety_Class__c</fullName>
        <formula>TEXT(GE_ES_ProdctName__r.GE_PWNUC_Safety_Cls__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Safety Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SM_OG_MC_InstalledBase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Base</label>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>Case_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Product</label>
    <nameField>
        <displayFormat>CPN-{0000000000}</displayFormat>
        <label>Case Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>